<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="EAj-pk-Qoc">
    <device id="retina4_7" orientation="portrait">
        <adaptation id="fullscreen"/>
    </device>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Tab Bar Controller-->
        <scene sceneID="HRz-yd-8ao">
            <objects>
                <tabBarController id="EAj-pk-Qoc" sceneMemberID="viewController">
                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="sns-5B-nQD">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
                        <autoresizingMask key="autoresizingMask"/>
                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <color key="tintColor" red="0.27058823529999998" green="0.2666666667" blue="0.72156862749999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <color key="selectedImageTintColor" red="0.27058823529999998" green="0.2666666667" blue="0.72156862749999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                    </tabBar>
                    <connections>
                        <segue destination="qOp-NG-d1D" kind="relationship" relationship="viewControllers" id="eEi-rA-knW"/>
                        <segue destination="b1W-0B-UGl" kind="relationship" relationship="viewControllers" id="5Rv-xB-Boj"/>
                        <segue destination="AWj-jp-FVK" kind="relationship" relationship="viewControllers" id="xzG-KL-HtR"/>
                        <segue destination="1D8-rx-tRj" kind="relationship" relationship="viewControllers" id="Vl3-pw-uaf"/>
                    </connections>
                </tabBarController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="0gu-pJ-Tei" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-364" y="106"/>
        </scene>
        <!--My Activities-->
        <scene sceneID="FpY-mY-My4">
            <objects>
                <navigationController id="AWj-jp-FVK" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="My Activities" image="My-Activities" id="hzr-GB-bBm"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="CV5-eU-3vx">
                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <connections>
                        <segue destination="U7r-fx-FNi" kind="relationship" relationship="rootViewController" id="fPR-Wu-8U0"/>
                    </connections>
                </navigationController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="fKS-zw-LmV" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="564" y="404"/>
        </scene>
        <!--viewMyActivities-->
        <scene sceneID="Iw0-JI-MLc">
            <objects>
                <viewControllerPlaceholder storyboardName="MyActivities" referencedIdentifier="viewMyActivities" id="U7r-fx-FNi" sceneMemberID="viewController">
                    <navigationItem key="navigationItem" id="ayH-PC-Fnf"/>
                </viewControllerPlaceholder>
                <placeholder placeholderIdentifier="IBFirstResponder" id="Dxi-q4-hXV" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1504" y="393"/>
        </scene>
        <!--Profile-->
        <scene sceneID="nwe-fG-SLO">
            <objects>
                <navigationController title="Profile" id="1D8-rx-tRj" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Profile" image="Profile" id="ba8-bF-WtM"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Vu7-6k-s4K">
                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <connections>
                        <segue destination="PWl-fI-J3c" kind="relationship" relationship="rootViewController" id="HsI-vN-AYA"/>
                    </connections>
                </navigationController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="yIU-Vt-OmJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="564" y="1128"/>
        </scene>
        <!--profileMain-->
        <scene sceneID="YEJ-rb-JJE">
            <objects>
                <viewControllerPlaceholder storyboardName="Profile" referencedIdentifier="profileMain" id="PWl-fI-J3c" sceneMemberID="viewController">
                    <navigationItem key="navigationItem" id="BXd-3g-Lbt"/>
                </viewControllerPlaceholder>
                <placeholder placeholderIdentifier="IBFirstResponder" id="y8P-ro-Grx" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1506" y="1127"/>
        </scene>
        <!--viewDiscover-->
        <scene sceneID="el8-iA-QHI">
            <objects>
                <viewControllerPlaceholder storyboardName="Discover" referencedIdentifier="viewDiscover" id="MW7-Vm-tjg" sceneMemberID="viewController">
                    <navigationItem key="navigationItem" id="oP3-sc-mP9"/>
                </viewControllerPlaceholder>
                <placeholder placeholderIdentifier="IBFirstResponder" id="Mb5-KK-zvO" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1518" y="-939"/>
        </scene>
        <!--Discover-->
        <scene sceneID="qfZ-z7-lCR">
            <objects>
                <navigationController id="qOp-NG-d1D" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Discover" image="Discover" id="uQe-Jl-aTq"/>
                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="ztS-Lw-euO">
                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <connections>
                        <segue destination="MW7-Vm-tjg" kind="relationship" relationship="rootViewController" id="QwQ-w0-mDw"/>
                    </connections>
                </navigationController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="rec-3i-fhq" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="564" y="-938"/>
        </scene>
        <!--viewTopics-->
        <scene sceneID="QYt-tQ-Ph0">
            <objects>
                <viewControllerPlaceholder storyboardIdentifier="Topics" storyboardName="Topics" referencedIdentifier="viewTopics" id="FsU-Ic-pRN" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Item" id="9nD-RF-AcL"/>
                    <navigationItem key="navigationItem" id="QGu-S6-xU6"/>
                </viewControllerPlaceholder>
                <placeholder placeholderIdentifier="IBFirstResponder" id="xhO-KM-LFi" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1385" y="-258"/>
        </scene>
        <!--Topics-->
        <scene sceneID="wYe-0Z-hku">
            <objects>
                <navigationController title="Topics" id="b1W-0B-UGl" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Topics" image="Topics" id="re6-HY-2vE"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="1aj-52-qzw">
                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <connections>
                        <segue destination="FsU-Ic-pRN" kind="relationship" relationship="rootViewController" id="cso-au-jv0"/>
                    </connections>
                </navigationController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="Ead-Bv-mZY" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="564" y="-257"/>
        </scene>
    </scenes>
    <resources>
        <image name="Discover" width="20" height="20"/>
        <image name="My-Activities" width="18" height="20"/>
        <image name="Profile" width="16" height="16"/>
        <image name="Topics" width="20" height="20"/>
    </resources>
</document>
